--- a/package.json
+++ b/package.json
@@ -8,12 +8,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
+    "mongoose": "^7.0.0",
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "version": "1.0.0",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/safak/youtube.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/safak/youtube/issues"
+  },
+  "homepage": "https://github.com/safak/youtube#readme"
 }
