--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@paypal/react-paypal-js": "^7.8.2",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
+    "cookie": "^0.5.0",
     "mongoose": "^7.0.0",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "eslint": "8.4.1",
